2005-07-12  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b59

	* Fix: Prevent non-integer data from being passed into get*Tag functions

2005-07-12  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b58

	* Change: Create a new session after destroying the old on logout, 
	  and set $gallery->session->gRedirDone to true to prevent the 'you must be logged in'
	  notice when logging out of a protected album.

	* Change: Move some of the session creation logic into createGallerySession()

2005-07-11 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b57

	* "Fix": Added function addSearchForm() that return the Form for entering the searchstring.
		 Benifit is unified layout and reuseability.
		 While doing this created functions langLeft() and langRight() 
		 which returns "left" or "right" according to direction.

2005-07-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b56

	* Fix: Subjectprefix for emails got lost in b47

	* Change: search.php
		  - Name of album / photo is now searched also
		  - lots of indenting
		  - layout unified like tools/
		  - removed html_wrap/ header and footer and use comman gallery h/f

2005-07-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b55

	* Fix: if useIcons set to no, options in viewphoto dropdown had brackets []
	  Thanks to Iain Lea again :)

2005-07-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b54

	* Fix: Missing closing bracket in a gettext call
	       when creating subject for a mail in classes/Album.php
	  Thanks to Iain Lea.

2005-07-06 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b53

	* Fix: IP of Commenter was showed to everybody in comments overview.
	       Now only admins or album owner can see it.

2005-07-06 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b52

	* Fix: Some Titles in stats where switched.

	* Change: enhanced detection for nextId

	* Change: Lots of indenting

2005-07-05 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b51

	* Fix: When deleting on photolevel, jump to next (or previous if at the end) photo.
	  Thanks to Iain Lea.
