@@ -271,8 +271,9 @@ a.error:hover {
 .searchform /* defines form for search */
 	{
 	  font-size: 10px; 
-	  font-weight: bold; 
+	  font-weight: bold;
 	}
+
 .leftspacer  /* amount of space to the left of the header and titles */
 	{
 	  width: 0px;
