@@ -31,28 +31,28 @@ $versions=array();
 $versions['AUTHORS']='1.24';
 $versions['LICENSE.txt']='1.2';
 $versions['README']='1.28';
-$versions['Version.php']='1.1422';
+$versions['Version.php']='1.1437';
 $versions['add_comment.php']='1.49';
 $versions['add_photos.php']='1.78';
 $versions['add_photos_frame.php']='1.9';
 $versions['album_permissions.php']='1.55';
-$versions['albums.php']='1.201';
+$versions['albums.php']='1.202';
 $versions['captionator.php']='1.64';
-$versions['classes/Album.php']='1.254';
+$versions['classes/Album.php']='1.257';
 $versions['classes/AlbumDB.php']='1.41';
-$versions['classes/AlbumItem.php']='1.100';
+$versions['classes/AlbumItem.php']='1.101';
 $versions['classes/Comment.php']='1.18';
 $versions['classes/Database.php']='1.9';
 $versions['classes/EverybodyUser.php']='1.12';
 $versions['classes/HTML/table.php']='1.4';
-$versions['classes/Image.php']='1.65';
+$versions['classes/Image.php']='1.66';
 $versions['classes/LoggedInUser.php']='1.8';
 $versions['classes/NobodyUser.php']='1.13';
 $versions['classes/User.php']='1.29';
 $versions['classes/UserDB.php']='1.23';
 $versions['classes/database/mysql/Database.php']='1.10';
 $versions['classes/gallery/User.php']='1.22';
-$versions['classes/gallery/UserDB.php']='1.36';
+$versions['classes/gallery/UserDB.php']='1.37';
 $versions['classes/mambo/User.php']='1.3';
 $versions['classes/mambo/UserDB.php']='1.3';
 $versions['classes/nsnnuke/AdminUser.php']='1.3';
@@ -77,18 +77,18 @@ $versions['contrib/mambo/toolbar.gallery.php']='1.2';
 $versions['contrib/phpBB2/modules.php']='1.8';
 $versions['copy_photo.php']='1.23';
 $versions['create_user.php']='1.53';
-$versions['css/base.css.default']='1.17';
+$versions['css/base.css.default']='1.18';
 $versions['css/config.css.default']='1.22';
 $versions['css/embedded_style.css.default']='1.21';
-$versions['css/screen.css.default']='1.14';
+$versions['css/screen.css.default']='1.15';
 $versions['delete_album.php']='1.48';
-$versions['delete_photo.php']='1.69';
+$versions['delete_photo.php']='1.70';
 $versions['delete_user.php']='1.45';
-$versions['do_command.php']='1.82';
+$versions['do_command.php']='1.83';
 $versions['docs/html.css']='1.3';
 $versions['ecard_form.php']='1.5';
 $versions['ecard_preview.php']='1.1';
-$versions['edit_appearance.php']='1.107';
+$versions['edit_appearance.php']='1.108';
 $versions['edit_caption.php']='1.64';
 $versions['edit_field.php']='1.45';
 $versions['edit_thumb.php']='1.43';
@@ -109,7 +109,7 @@ $versions['html_wrap/frames/shadows/frame.def']='1.8';
 $versions['html_wrap/frames/simple_book/frame.def']='1.6';
 $versions['html_wrap/frames/wooden/frame.def']='1.3';
 $versions['html_wrap/gallery.footer.default']='1.42';
-$versions['html_wrap/gallery.header.default']='1.18';
+$versions['html_wrap/gallery.header.default']='1.19';
 $versions['html_wrap/general.footer.default']='1.3';
 $versions['html_wrap/inline_albumthumb.footer.default']='1.9';
 $versions['html_wrap/inline_albumthumb.frame.default']='1.17';
@@ -123,8 +123,6 @@ $versions['html_wrap/inline_photo.header.default']='1.8';
 $versions['html_wrap/inline_photothumb.frame.default']='1.8';
 $versions['html_wrap/photo.footer.default']='1.28';
 $versions['html_wrap/photo.header.default']='1.15';
-$versions['html_wrap/search.footer.default']='1.17';
-$versions['html_wrap/search.header.default']='1.16';
 $versions['html_wrap/slideshow.footer.default']='1.20';
 $versions['html_wrap/slideshow.header.default']='1.12';
 $versions['html_wrap/stats.footer.default']='1.3';
@@ -140,32 +138,35 @@ $versions['includes/add_photos/add_form.inc']='1.24';
 $versions['includes/add_photos/add_other.inc']='1.11';
 $versions['includes/add_photos/add_url.inc']='1.14';
 $versions['includes/add_photos/captionOptions.inc.php']='1.3';
-$versions['includes/definitions/albumProperties.php']='1.3';
+$versions['includes/definitions/albumProperties.php']='1.4';
 $versions['includes/definitions/services.php']='1.1';
+$versions['includes/errors/configure_help.php']='1.1';
+$versions['includes/errors/reconfigure.php']='1.1';
+$versions['includes/errors/unconfigured.php']='1.1';
 $versions['includes/slideshow/applet.cfg']='1.2';
 $versions['includes/slideshow/applet.inc']='1.9';
 $versions['includes/slideshow/high.inc']='1.17';
 $versions['includes/slideshow/low.inc']='1.15';
 $versions['includes/stats/stats.inc.php']='1.10';
 $versions['index.php']='1.71';
-$versions['init.php']='1.128';
+$versions['init.php']='1.131';
 $versions['js/client_sniff.js']='1.2';
-$versions['layout/adminbox.inc']='1.26';
+$versions['layout/adminbox.inc']='1.27';
 $versions['layout/breadcrumb.inc']='1.28';
-$versions['layout/commentbox.inc']='1.21';
+$versions['layout/commentbox.inc']='1.22';
 $versions['layout/commentboxbottom.inc']='1.15';
 $versions['layout/commentboxtop.inc']='1.22';
 $versions['layout/commentdraw.inc']='1.27';
 $versions['layout/navigator.inc']='1.37';
 $versions['layout/navmicro.inc']='1.3';
-$versions['layout/navphoto.inc']='1.36';
+$versions['layout/navphoto.inc']='1.37';
 $versions['layout/navtablebegin.inc']='1.3';
 $versions['layout/navtableend.inc']='1.2';
 $versions['layout/navtablemiddle.inc']='1.2';
 $versions['layout/searchdraw.inc']='1.16';
-$versions['layout/watermarkform.inc']='1.17';
+$versions['layout/watermarkform.inc']='1.20';
 $versions['lib/Form.php']='1.23';
-$versions['lib/lang.php']='1.50';
+$versions['lib/lang.php']='1.54';
 $versions['lib/messages.php']='1.3';
 $versions['lib/valchecks.php']='1.2';
 $versions['lib/voting.php']='1.7';
@@ -175,11 +176,11 @@ $versions['manifest.inc']='1.7';
 $versions['modify_user.php']='1.44';
 $versions['move_album.php']='1.58';
 $versions['move_photo.php']='1.92';
-$versions['multi_create_user.php']='1.22';
+$versions['multi_create_user.php']='1.23';
 $versions['new_password.php']='1.16';
 $versions['nls.php']='1.40';
 $versions['photo_owner.php']='1.25';
-$versions['platform/fs_unix.php']='1.25';
+$versions['platform/fs_unix.php']='1.26';
 $versions['platform/fs_win32.php']='1.30';
 $versions['poll_properties.php']='1.24';
 $versions['poll_results.php']='1.23';
@@ -193,10 +194,10 @@ $versions['reset_votes.php']='1.16';
 $versions['resize_photo.php']='1.58';
 $versions['rotate_photo.php']='1.51';
 $versions['rss.php']='1.21';
-$versions['save_photos.php']='1.115';
-$versions['search.php']='1.74';
+$versions['save_photos.php']='1.117';
+$versions['search.php']='1.76';
 $versions['secure.sh']='1.12';
-$versions['session.php']='1.50';
+$versions['session.php']='1.51';
 $versions['setup/.htaccess']='1.17';
 $versions['setup/backup_albums.php']='1.22';
 $versions['setup/check.inc']='1.44';
@@ -204,13 +205,13 @@ $versions['setup/check_imagemagick.php']='1.27';
 $versions['setup/check_mail.php']='1.13';
 $versions['setup/check_netpbm.php']='1.36';
 $versions['setup/check_versions.php']='1.22';
-$versions['setup/config_data.inc']='1.282';
+$versions['setup/config_data.inc']='1.283';
 $versions['setup/confirm.inc']='1.104';
 $versions['setup/constants.inc']='1.45';
 $versions['setup/defaults.inc']='1.34';
 $versions['setup/diagnostics.php']='1.24';
 $versions['setup/frame_test.php']='1.7';
-$versions['setup/functions.inc']='1.216';
+$versions['setup/functions.inc']='1.217';
 $versions['setup/ghcc.php']='1.9';
 $versions['setup/gpl.txt']='1.7';
 $versions['setup/index.php']='1.72';
@@ -231,17 +232,17 @@ $versions['skins/madmod1/tpl/slideshow.header.tpl']='1.1';
 $versions['slideshow.php']='1.77';
 $versions['sort_album.php']='1.33';
 $versions['stamp_preview.php']='1.1';
-$versions['stats.php']='1.26';
+$versions['stats.php']='1.30';
 $versions['tools/build_manifest.php']='1.13';
 $versions['tools/find_orphans.php']='1.24';
 $versions['tools/validate_albums.php']='1.4';
 $versions['upgrade_album.php']='1.42';
 $versions['upgrade_users.php']='1.13';
 $versions['user_preferences.php']='1.44';
-$versions['util.php']='1.529';
+$versions['util.php']='1.534';
 $versions['view_album.php']='1.307';
 $versions['view_comments.php']='1.48';
-$versions['view_photo.php']='1.254';
-$versions['view_photo_properties.php']='1.45';
+$versions['view_photo.php']='1.259';
+$versions['view_photo_properties.php']='1.46';
 $versions['watermark_album.php']='1.20';
 ?>
